--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ main{
 }
 .hero{
     width: 100%;
-    height: 60%;
+    height: 75%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -213,6 +213,7 @@ main{
 }
 .items-container .text .links a{
  color: var(--color-verde-oscuro);
+ font-size: 2em;
 }
 .items-container:hover{
     box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
