--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ body{
 }
 
 header{
-
     background-color: #333333;
     width: 100%;
     height: 65px;
@@ -54,7 +53,45 @@ header{
 .nav-links:hover{
     color: var(--color-verde-oscuro);
 }
+.selected-language{
+    width: 100%;
+    height: 56px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+}
+.lan {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 45px;
+    height: 45px;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition-duration: .3s;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+  }
+  
+  /* plus sign */
+  .sign {
+    width: 100%;
+    transition-duration: .3s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .sign svg {
+    width: 27px;
+  }
 
+
+  
 
 
 main{
@@ -105,7 +142,7 @@ main{
     border-radius: 6px;
     padding: 5px 10px 5px 10px;
     font-size: 14px;
-    transition: all ease-in-out .5s;
+    transition: all ease .5s;
     color: var(--color-text-black);
 }
 .btn:hover{
@@ -148,7 +185,9 @@ main{
     display: grid;
     place-content: center;
     align-items: center;
-    transition: all ease-in-out .5s;
+    transition: all ease-in-out .3s;
+    border: solid 1px #333333;
+    border-style: dashed;
 }
 .item a{
     font-size: 1.9em;
@@ -334,6 +373,15 @@ main{
 
   @media (max-width: 1280px) {
     
+  }
+  @media (max-width: 1080px) {
+    main{
+        width: 100%;
+    }
+    .container-center{
+        width: 100%;
+        padding: 20px;
+    }
   }
   
   @media (max-width: 1024px) {
