--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ main{
     color: var(--color-text-black);
 }
 .proyects .content-items{
+    margin-top: 20px;
     width: 100%;
     height: 100%;
     display: grid;
